# JDAlign

./: .dockerignore  .gitignore  Agentic Resume Auditor - Product-Tech Spec V1.docx  README.md  docker-compose.yml  pyproject.toml  test_hitl.py
backend/: .env.example  Dockerfile  api.py  engine.py  main.py  state.py  utils.py
backend/nodes/: auditor.py  critic.py  reconstructor.py  writer.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: HomeClient.tsx  LoginClient.tsx
